// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template for 508 Testing renders help mode without crashing 1`] = `
<DocumentFragment>
  <div
    class="templates-for-508-testing"
  >
    <div
      class="margin-bottom-6 padding-2 bg-base-lightest"
    >
      <h3
        class="margin-top-0 margin-bottom-2"
      >
        Page contents
      </h3>
      <ul
        class="usa-list usa-list--unstyled"
      >
        <li
          class="margin-bottom-1"
        >
          <a
            class="usa-link"
            href="#vpat"
          >
            <span
              class="display-flex flex-align-center"
            >
              Voluntary Product Assessment Template (VPAT)
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="margin-bottom-1"
        >
          <a
            class="usa-link"
            href="#test-plan"
          >
            <span
              class="display-flex flex-align-center"
            >
              Test Plan
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <a
            class="usa-link"
            href="#remediation-plan"
          >
            <span
              class="display-flex flex-align-center"
            >
              Remediation Plan
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="vpat"
      >
        Voluntary Product Assessment Template (VPAT)
      </h2>
      <p
        class="margin-bottom-4"
      >
        A VPAT is a document that helps CMS and other government agencies understand how you will meet the 508 Standards for IT accessibility.
      </p>
      <h3
        class="margin-bottom-2"
      >
        Tips to complete a VPAT
      </h3>
      <p
        class="margin-bottom-1"
      >
        For each row in the table, indicate the conformance level. There are 5 levels:
      </p>
      <ul
        class="usa-list usa-list--unstyled desktop:grid-col-8"
      >
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Supports:
          </span>
           The functionality of the product has at least one method that meets the criterion without known defects or meets with equivalent facilitation.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Partially Supports:
          </span>
           Some functionality of the product does not meet the criterion.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Does Not Support:
          </span>
           The majority of product functionality does not meet the criterion.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Not Applicable:
          </span>
           The criterion is not relevant to the product.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Not Evaluated:
          </span>
           The product has not been evaluated against the criterion. This can be used only in WCAG 2.0 Level AAA.
        </li>
      </ul>
      <p
        class="margin-bottom-4"
      >
        After indicating the conformance level, provide a detailed explanation in the ‘Remarks and Evaluation’ column.
      </p>
      <div
        class="usa-summary-box desktop:grid-col-6 margin-bottom-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download VPAT template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <p>
              <a
                class="usa-link usa-link--external"
                href="/https://www.itic.org/policy/accessibility/vpat"
                rel="noopener noreferrer"
                target="_blank"
              >
                Download the current VPAT template (opens in a new tab)
              </a>
               from the Information Technology Industry Council (ITI) website.
            </p>
            <p
              class="display-flex flex-row flex-align-center"
            >
              <svg
                class="usa-icon margin-right-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                />
              </svg>
               Do not skip any row in the document. This will result in delays.
            </p>
            <a
              class="usa-link usa-link--external"
              href="/https://www.youtube.com/watch?v=kAkSV9xiJ1A"
              rel="noopener noreferrer"
              target="_blank"
            >
              Watch tutorial on how to fill out a VPAT (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
      <div
        class="easi-divider margin-bottom-4"
      />
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="test-plan"
      >
        Test Plan
      </h2>
      <p
        class="margin-bottom-2 line-height-sans-5 desktop:grid-col-9"
      >
        The Test Plan is a document that helps the Section 508 team understand your system and know what areas of your system to test before it goes live. In this document you will provide:
      </p>
      <ul
        class="usa-list desktop:grid-col-8 margin-bottom-4"
      >
        <li
          class="maxw-none margin-bottom-1"
        >
          a description of your system
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          information on how to set up and access it
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          user scenarios and steps taken to perform actions
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          and any other constraints, assumptions or risks
        </li>
      </ul>
      <div
        class="usa-summary-box desktop:grid-col-6 margin-bottom-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download Test Plan template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <a
              class="usa-link usa-link--external"
              href="/Section508TestPlanTemplate.pdf"
              target="_blank"
            >
              Download the Test Plan template as a PDF (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
      <div
        class="easi-divider margin-bottom-4"
      />
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="remediation-plan"
      >
        Remediation Plan
      </h2>
      <p
        class="margin-bottom-2 line-height-sans-5 desktop:grid-col-9"
      >
        The Remediation Plan is a document that helps the Section 508 team understand how you plan to fix the issues that were identified from the 508 test. In this document you will provide:
      </p>
      <ul
        class="usa-list desktop:grid-col-8 margin-bottom-4"
      >
        <li
          class="maxw-none margin-bottom-1"
        >
          solutions for each issue
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          when and how you plan to schedule these changes into your project
        </li>
      </ul>
      <div
        class="usa-summary-box desktop:grid-col-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download Remediation Plan template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <a
              class="usa-link usa-link--external"
              href="/CMS508RemediationPlanTemplate.pdf"
              target="_blank"
            >
              Download the Test Plan template as a PDF (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Template for 508 Testing renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="templates-for-508-testing"
  >
    <h1
      aria-live="polite"
      class="easi-h1 line-height-heading-2"
      tabindex="-1"
    >
      Templates for 508 testing
    </h1>
    <div
      class="margin-bottom-6 padding-2 bg-base-lightest"
    >
      <h3
        class="margin-top-0 margin-bottom-2"
      >
        Page contents
      </h3>
      <ul
        class="usa-list usa-list--unstyled"
      >
        <li
          class="margin-bottom-1"
        >
          <a
            class="usa-link"
            href="#vpat"
          >
            <span
              class="display-flex flex-align-center"
            >
              Voluntary Product Assessment Template (VPAT)
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="margin-bottom-1"
        >
          <a
            class="usa-link"
            href="#test-plan"
          >
            <span
              class="display-flex flex-align-center"
            >
              Test Plan
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class=""
        >
          <a
            class="usa-link"
            href="#remediation-plan"
          >
            <span
              class="display-flex flex-align-center"
            >
              Remediation Plan
              <svg
                class="usa-icon margin-left-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="vpat"
      >
        Voluntary Product Assessment Template (VPAT)
      </h2>
      <p
        class="margin-bottom-4"
      >
        A VPAT is a document that helps CMS and other government agencies understand how you will meet the 508 Standards for IT accessibility.
      </p>
      <h3
        class="margin-bottom-2"
      >
        Tips to complete a VPAT
      </h3>
      <p
        class="margin-bottom-1"
      >
        For each row in the table, indicate the conformance level. There are 5 levels:
      </p>
      <ul
        class="usa-list usa-list--unstyled desktop:grid-col-8"
      >
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Supports:
          </span>
           The functionality of the product has at least one method that meets the criterion without known defects or meets with equivalent facilitation.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Partially Supports:
          </span>
           Some functionality of the product does not meet the criterion.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Does Not Support:
          </span>
           The majority of product functionality does not meet the criterion.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Not Applicable:
          </span>
           The criterion is not relevant to the product.
        </li>
        <li
          class="maxw-none margin-bottom-1  padding-left-2"
        >
          <span
            class="text-bold display-inline"
          >
            Not Evaluated:
          </span>
           The product has not been evaluated against the criterion. This can be used only in WCAG 2.0 Level AAA.
        </li>
      </ul>
      <p
        class="margin-bottom-4"
      >
        After indicating the conformance level, provide a detailed explanation in the ‘Remarks and Evaluation’ column.
      </p>
      <div
        class="usa-summary-box desktop:grid-col-6 margin-bottom-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download VPAT template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <p>
              <a
                class="usa-link usa-link--external"
                href="/https://www.itic.org/policy/accessibility/vpat"
                rel="noopener noreferrer"
                target="_blank"
              >
                Download the current VPAT template (opens in a new tab)
              </a>
               from the Information Technology Industry Council (ITI) website.
            </p>
            <p
              class="display-flex flex-row flex-align-center"
            >
              <svg
                class="usa-icon margin-right-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                />
              </svg>
               Do not skip any row in the document. This will result in delays.
            </p>
            <a
              class="usa-link usa-link--external"
              href="/https://www.youtube.com/watch?v=kAkSV9xiJ1A"
              rel="noopener noreferrer"
              target="_blank"
            >
              Watch tutorial on how to fill out a VPAT (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
      <div
        class="easi-divider margin-bottom-4"
      />
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="test-plan"
      >
        Test Plan
      </h2>
      <p
        class="margin-bottom-2 line-height-sans-5 desktop:grid-col-9"
      >
        The Test Plan is a document that helps the Section 508 team understand your system and know what areas of your system to test before it goes live. In this document you will provide:
      </p>
      <ul
        class="usa-list desktop:grid-col-8 margin-bottom-4"
      >
        <li
          class="maxw-none margin-bottom-1"
        >
          a description of your system
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          information on how to set up and access it
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          user scenarios and steps taken to perform actions
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          and any other constraints, assumptions or risks
        </li>
      </ul>
      <div
        class="usa-summary-box desktop:grid-col-6 margin-bottom-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download Test Plan template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <a
              class="usa-link usa-link--external"
              href="/Section508TestPlanTemplate.pdf"
              target="_blank"
            >
              Download the Test Plan template as a PDF (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
      <div
        class="easi-divider margin-bottom-4"
      />
    </div>
    <div
      class="templates-for-508-testing__section"
    >
      <h2
        class="margin-bottom-2"
        id="remediation-plan"
      >
        Remediation Plan
      </h2>
      <p
        class="margin-bottom-2 line-height-sans-5 desktop:grid-col-9"
      >
        The Remediation Plan is a document that helps the Section 508 team understand how you plan to fix the issues that were identified from the 508 test. In this document you will provide:
      </p>
      <ul
        class="usa-list desktop:grid-col-8 margin-bottom-4"
      >
        <li
          class="maxw-none margin-bottom-1"
        >
          solutions for each issue
        </li>
        <li
          class="maxw-none margin-bottom-1"
        >
          when and how you plan to schedule these changes into your project
        </li>
      </ul>
      <div
        class="usa-summary-box desktop:grid-col-6"
        data-testid="summary-box"
      >
        <div
          class="usa-summary-box__body"
        >
          <h3
            class="usa-summary-box__heading"
          >
            Download Remediation Plan template
          </h3>
          <div
            class="usa-summary-box__text"
          >
            <a
              class="usa-link usa-link--external"
              href="/CMS508RemediationPlanTemplate.pdf"
              target="_blank"
            >
              Download the Test Plan template as a PDF (opens in a new tab)
            </a>
          </div>
        </div>
      </div>
      <div
        class="easi-divider margin-bottom-4"
      />
    </div>
  </div>
</DocumentFragment>
`;
